@@ -21,8 +21,6 @@
 #ifndef WEB_KIT_DOM_TEST_INTERFACE_PRIVATE_H
 #define WEB_KIT_DOM_TEST_INTERFACE_PRIVATE_H
 
-#if ENABLE(Condition1) || ENABLE(Condition2)
-
 #include <glib-object.h>
 #include <webkit/WebKitDOMObject.h>
 #include "TestInterface.h"
@@ -37,7 +35,5 @@ namespace WebKit {
     kit(WebCore::TestInterface* node);
 
 } // namespace WebKit
-
-#endif /* ENABLE(Condition1) || ENABLE(Condition2) */
 
 #endif /* WEB_KIT_DOM_TEST_INTERFACE_PRIVATE_H */
