@@ -1,3 +1,14 @@
+2010-06-14  Jian Li  <jianli@chromium.org>
+
+        Unreviewed. Fix build break in GTK.
+
+        * bindings/scripts/CodeGeneratorGObject.pm:
+        * bindings/scripts/test/GObject/WebKitDOMTestCallback.h:
+        * bindings/scripts/test/GObject/WebKitDOMTestCallbackPrivate.h:
+        * bindings/scripts/test/GObject/WebKitDOMTestInterface.h:
+        * bindings/scripts/test/GObject/WebKitDOMTestInterfacePrivate.h:
+        * bindings/scripts/test/GObject/WebKitDOMTestObj.h:
+
 2010-06-14  Chris Fleizach  <cfleizach@apple.com>
 
         Reviewed by Beth Dakin.
